--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,8 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
+    color:MistyRose;
+    background:Blue;
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
