--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    color:OrangeRed;
+    color:Bisque;
     background:DarkSalmon;
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
