--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ a:hover {
 }
 h1 {
     color:Bisque;
-    background:DarkSalmon;
+    background:LightSalmon;
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
