--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 body {
     margin: 60px auto;
     width: 70%;
+    background:LightPink;
+    
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
