--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: Navy;
+    color: #999;
 }
 a:hover {
     text-decoration: underline;
