--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,13 @@ body {
     margin: 60px auto;
     width: 70%;
     background:Thistle;
-       
+}
+#cover{
+    background:url ("http://www.ui3g.com/ui3gimg/2014/img1ui/2438b02afe0ed72f496ea759.jpg");
+    
     
 }
-nav ul, footer ul {
+nav ul, footer ul { 
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
