--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,8 @@ body {
     background:Thistle;
 }
 #cover{
-    background:url ("http://www.ui3g.com/ui3gimg/2014/img1ui/2438b02afe0ed72f496ea759.jpg");
-    
+    background:url ("http://www.ui3g.com/ui3gimg/2014/img1ui/2438b02afe0ed72f496ea759.jpg")  no-repeat top center;
+   
     
 }
 nav ul, footer ul { 
