--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 60px auto;
     width: 70%;
-   background-image:url ("http://www.ui3g.com/ui3gimg/2014/img1ui/2438b02afe0ed72f496ea759.jpg");
+   background:Thistle;
 
    
     
