--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ h1 {
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    color:LightSalmon ;
+    color:DarkMagenta ;
 }
 footer {
     border-top: 1px solid #d5d5d5;
