--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ body {
 }
 nav ul, footer ul { 
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    color:SkyBlue;
     padding: 0px;
     list-style: none;
     font-weight: bold;
