--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ table {
 }
 
 thead th {
-  background: #88CCF1;
+  background:LightCoral;
   color: #FFF;
   font-family: 'Lato', sans-serif;
   font-size: 16px;
