--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ a:hover {
 }
 h1 {
     color:Bisque;
-    background:LightSalmon;
+    background:LightCoral;
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
