--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ ul {
 li {
   color: #FFF;
   display: inline-block;
-  font-family: 'Oxygen', sans-serif;
+  font-family:"Playfair Display", serif;
   font-size: 16px;
   font-weight: 300;
   letter-spacing: 2px;
