--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@ tr {
 }
 
 th, td {
-  font-family: 'Lato', sans-serif;
+  font-family:  'Playfair Display', serif;
   font-size: 18px;
   font-weight: 400;
   padding: 20px;
