--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ ul {
 }
 
 li {
-  color: #FFF;
+  color:Bisque ;
   display: inline-block;
   font-family:"Playfair Display", serif;
   font-size: 16px;
