--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ ul.posts li {
 
 
 h3 {
-    color:LightCoral;
+    color:DarkMagenta;
     font-size: 1.5em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
